[package]
name = "resimulate"
version = "1.0.0"
resolver = "2"
edition = "2024"

[[bin]]
name = "resimulate"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
futures = "0.3.31"
hashbrown = { workspace = true }
lazy_static = "1.5.0"
rand = "0.9.2"
rusqlite = {workspace = true}
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.141"
serde_stacker = "0.1.12"
tokio = { version = "1.47.1", features = ["full"] }

clarity = { path = "../../clarity" }
stacks-common = { path = "../../stacks-common" }
stackslib = { path = "../../stackslib" }

[target.'cfg(not(any(target_os = "macos", target_os="windows", target_arch = "arm")))'.dependencies]
tikv-jemallocator = {workspace = true}
